--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "better-sqlite3": "^11.8.1",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
