--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/react-dom": "^19.0.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "@vercel/webpack-asset-relocator-loader": "^1.7.3",
+    "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "better-sqlite3": "^11.8.1",
     "css-loader": "^6.11.0",
     "electron": "34.0.1",
@@ -46,7 +46,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.3.1",
     "electron-squirrel-startup": "^1.0.1",
+    "motion": "^12.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.3"
