--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,11 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "paths": {
-      "*": ["node_modules/*"]
+      "*": ["node_modules/*"],
+	  "@/*": ["src/*"],
+	  "@utils/*": ["src/utils/*"]
     },
 	"jsx": "react-jsx"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "tests"]
 }
